index: fix spacing for iphone

--- a/css/bootswatch.css
+++ b/css/bootswatch.css
@@ -175,6 +175,10 @@ body {
 		padding-bottom: 80px;
 	}
 
+	.thumbnails > .span4 {
+		margin-left: 0;
+	}
+
 }
 
 /* Portrait tablet to landscape and desktop */
